--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+\/* Global */
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +10,7 @@ body {
   background: #f5f0e1;
   color: #333;
 }
+
 .feedback-text {
   font-size: 1.2rem;
   font-weight: 600;
@@ -163,6 +165,7 @@ body {
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 999;
 }
 
 .modal iframe {
